--- a/src/css/index.css
+++ b/src/css/index.css
@@ -91,7 +91,7 @@ nav a {
   opacity: 0;
   transition: opacity 150ms ease-in-out;
 }
-nav a:hover {
+nav a:hover, nav a:active {
   color: rgb(68, 68, 68);
 }
 
