--- a/main.css
+++ b/main.css
@@ -87,12 +87,35 @@ nav ul li {
   margin-left: 1em;
 }
 nav a {
+  position: relative;
   color: black;
   text-decoration: none;
-  font: 1.2rem;
+  font-size: 1.2rem;
   text-transform: uppercase;
+  display: inline-block;
   opacity: 0;
   transition: opacity 150ms ease-in-out;
+}
+nav a::before, nav a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
+}
+nav a::before {
+  top: 0;
+  transform-origin: left;
+}
+nav a::after {
+  bottom: 0;
+  transform-origin: right;
+}
+nav a:hover::before, nav a:hover::after {
+  transform: scaleX(1);
 }
 nav a:hover, nav a:active {
   color: rgb(68, 68, 68);
@@ -118,24 +141,6 @@ nav a:hover, nav a:active {
   height: 100%;
   display: flex;
   align-items: center;
-}
-.navToggleLabel span, .navToggleLabel span::before, .navToggleLabel span::after {
-  display: block;
-  background: white;
-  height: 2px;
-  width: 2em;
-  border-radius: 2px;
-  position: relative;
-}
-.navToggleLabel span::before, .navToggleLabel span::after {
-  content: "";
-  position: absolute;
-}
-.navToggleLabel span::before {
-  bottom: 9px;
-}
-.navToggleLabel span::after {
-  top: 9px;
 }
 
 @media screen and (min-width: 720px) {
