--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -71,32 +71,62 @@ nav {
     left: 0;
     background: var(--NavBackground);
     width: 100%;
-    transform: scale(1,0);
+    transform: scale(1, 0);
     transform-origin: top;
     transition: transform 400ms ease-in-out;
 
     ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
+        margin: 0;
+        padding: 0;
+        list-style: none;
 
-      li {
-          margin-bottom: 1em;
-          margin-left: 1em;
-      }
+        li {
+            margin-bottom: 1em;
+            margin-left: 1em;
+        }
     }
 
     a {
-      color: black;
-      text-decoration: none;
-      font: 1.2rem;
-      text-transform: uppercase;
-      opacity: 0;
-      transition: opacity 150ms ease-in-out;
-    }
-    
-    a:hover, a:active {
-      color: rgb(68, 68, 68);
+        position: relative; // Make the anchor relative for the pseudo-elements
+        color: black;
+        text-decoration: none;
+        font-size: 1.2rem;
+        text-transform: uppercase;
+        display: inline-block;
+        opacity: 0;
+        transition: opacity 150ms ease-in-out;
+
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background-color: black;
+            transform: scaleX(0);
+            transition: transform 250ms ease-in-out;
+        }
+
+        &::before {
+            top: 0; // Position above the text
+            transform-origin: center;
+        }
+
+        &::after {
+            bottom: 0; // Position below the text
+            transform-origin: center;
+        }
+
+        &:hover::before,
+        &:hover::after {
+            transform: scaleX(1);
+        }
+
+        &:hover,
+        &:active {
+            color: rgb(68, 68, 68);
+        }
     }
 }
 
@@ -105,11 +135,12 @@ nav {
 }
 
 .navToggle:checked ~ nav {
-  transform: scale(1,1);
-  a {
-      opacity: 1;
-      transition: opacity 250ms ease-in-out 250ms;
-  }
+    transform: scale(1, 1);
+
+    a {
+        opacity: 1;
+        transition: opacity 250ms ease-in-out 250ms;
+    }
 }
 
 .navToggleLabel {
