--- a/src/css/index.css
+++ b/src/css/index.css
@@ -99,9 +99,9 @@ nav a::before, nav a::after {
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: black;
+  background-color: transparent;
   transform: scaleX(0);
-  transition: transform 250ms ease-in-out;
+  transition: transform 300ms ease-in-out;
 }
 nav a::before {
   top: 0;
@@ -112,6 +112,7 @@ nav a::after {
   transform-origin: center;
 }
 nav a:hover::before, nav a:hover::after {
+  background-color: black;
   transform: scaleX(1);
 }
 nav a:hover, nav a:active {
@@ -126,8 +127,8 @@ nav a:hover, nav a:active {
   transform: scale(1, 1);
 }
 .navToggle:checked ~ nav a {
-  opacity: 1;
-  transition: opacity 250ms ease-in-out 250ms;
+  opacity: 0.8;
+  transition: opacity 250ms ease-in-out;
 }
 
 .navToggleLabel {
@@ -199,21 +200,37 @@ nav a:hover, nav a:active {
     margin-bottom: 0em;
   }
   nav a {
-    opacity: 1;
     position: relative;
+    color: black;
+    text-decoration: none;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    display: inline-block;
+    opacity: 0.8;
+    transition: opacity 150ms ease-in-out;
   }
   nav a::before, nav a::after {
     content: "";
-    display: block;
-    height: 0.1em;
-    background: black;
     position: absolute;
     left: 0;
-    right: 0;
-    transform: scale(0, 1);
-    transition: transform ease-in-out 300ms;
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transform: scaleX(0);
+    transition: transform 300ms ease-in-out;
+  }
+  nav a::before {
+    top: 0;
+    transform-origin: center;
+  }
+  nav a::after {
+    bottom: 0;
+    transform-origin: center;
   }
   nav a:hover::before, nav a:hover::after {
-    transform: scale(1, 1);
+    transform: scaleX(1);
+  }
+  nav a:hover, nav a:active {
+    color: rgb(68, 68, 68);
   }
 }/*# sourceMappingURL=index.css.map */
