--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -103,9 +103,9 @@ nav {
             left: 0;
             width: 100%;
             height: 2px;
-            background-color: black;
+            background-color: transparent;
             transform: scaleX(0);
-            transition: transform 250ms ease-in-out;
+            transition: transform 300ms ease-in-out;
         }
 
         &::before {
@@ -120,6 +120,7 @@ nav {
 
         &:hover::before,
         &:hover::after {
+            background-color: black;
             transform: scaleX(1);
         }
 
@@ -138,8 +139,8 @@ nav {
     transform: scale(1, 1);
 
     a {
-        opacity: 1;
-        transition: opacity 250ms ease-in-out 250ms;
+        opacity: 0.8;
+        transition: opacity 250ms ease-in-out;
     }
 }
 
@@ -217,24 +218,46 @@ nav {
 
 
         a {
-            opacity: 1;
-            position: relative;
-        }
-        
-        a::before, a::after {
-            content: '';
-            display: block;
-            height: 0.1em;
-            background: black;
-            position: absolute;
-            left: 0;
-            right: 0;
-            transform: scale(0, 1);
-            transition: transform ease-in-out 300ms;
-        }
-
-        a:hover::before, a:hover::after {
-            transform: scale(1, 1);
+            position: relative; // Make the anchor relative for the pseudo-elements
+            color: black;
+            text-decoration: none;
+            font-size: 1.2rem;
+            text-transform: uppercase;
+            display: inline-block;
+            opacity: 0.8;
+            transition: opacity 150ms ease-in-out;
+    
+            &::before,
+            &::after {
+                content: '';
+                position: absolute;
+                left: 0;
+                width: 100%;
+                height: 2px;
+                background-color: black;
+                transform: scaleX(0);
+                transition: transform 300ms ease-in-out;
+            }
+    
+            &::before {
+                top: 0; // Position above the text
+                transform-origin: center;
+            }
+    
+            &::after {
+                bottom: 0; // Position below the text
+                transform-origin: center;
+            }
+    
+            &:hover::before,
+            &:hover::after {
+                transform: scaleX(1);
+            }
+    
+            &:hover,
+            &:active {
+                color: rgb(68, 68, 68);
+            }
         }
     }
   }
