Implemented snow fall speed based off of window height

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -41,7 +41,7 @@ canvas {
 
 //NAV and Header Stuff
 header {
-  padding: 1vh;
+  padding: 1em;
   background: var(--NavBackground);
   text-align: center;
   position: fixed;
