--- a/src/css/index.css
+++ b/src/css/index.css
@@ -40,7 +40,7 @@ canvas {
 }
 
 header {
-  padding: 1vh;
+  padding: 1em;
   background: var(--NavBackground);
   text-align: center;
   position: fixed;
