--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,5 +1,6 @@
 :root {
     --NavBackground: rgba(205, 205, 226, 0.74);
+    --opaqueNavBG: rgba(205, 205, 226);
     --Background: rgba(205, 205, 226, 0.76);
   }
   
@@ -14,6 +15,7 @@
   }
   
 body {
+    height: 100vh;
     font:normal 75% Arial, Helvetica, sans-serif;
     margin: 0;
     font-size: 1em;
@@ -30,37 +32,129 @@ canvas {
 }
 /* ---- particles.js container ---- */ 
 #particles-js {
-    position:absolute;
-    width: 100%;
-    height: 100%;
+    position:fixed;
+    width: 100vw;
+    height: 100vh;
     background-image: radial-gradient(farthest-corner at 30vw 20vh, #416b76 1%, #2b182c 100%);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
+    z-index: -99;
 } 
 
+#pageWrapper {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    height: 100vh;
+    padding-top: 3rem; 
+    overflow-y: auto;
+  }
+  
+  #contentContainer {
+    z-index: 1;
+    font-family:Inter,sans-serif;
+    line-height: 1.5;
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale;
+    text-align: center;
+    background-clip: text;
+    background: linear-gradient(transparent 3.5rem, black 6rem, black calc(100% - 3.5rem), transparent calc(100% - 0.5rem));
+    background-clip: text;
+    -webkit-background-clip: text;
+    background-attachment: fixed;
+    background-position: fixed;
+    color: transparent  
+    //color: rgba(255, 0, 0, 0.072);
+  }
+  
+  #contentBGWrapper {
+    z-index: -2;
+    background: linear-gradient(transparent  3.5rem,  rgba(205, 205, 226, 0.75) 6rem, rgba(205, 205, 226, 0.75) calc(100% - 3.5rem), transparent calc(100% - 0.5rem));
+    //background-clip: all;
+    background-attachment: fixed;
+    //background-position: fixed;
+    padding: 2rem;
+    margin-inline: 8vw;
+    margin-block: 4rem;
+    border-radius: 1rem;
+  }
+  
+  #footerContainer { 
+    background-color: transparent;
+    text-align: center;
+    margin: none;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+  }
+
+#footer {
+    z-index: 99;
+    background: var(--NavBackground);
+    text-align: center;
+    position: relative;
+    ul.socialBar {
+        position: relative;
+        list-style: none;
+        padding: 1em;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 0 0.25em;
+       
+        img {
+            width: 3em;
+            filter: none;
+            transition: filter 0.3s;
+        }
+        img:hover {
+            
+            filter: drop-shadow(-0.2em 0.2em 0.2em rgba(7, 42, 155, 0.5));
+        }
+    }
+    ul.footerInfo {
+        list-style: none;
+        padding: 1em;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 0 0.25em;
+        font-weight: bold;
+    }
+}
+
+
 //NAV and Header Stuff
+
+#navContainer {
+    display: flex;
+    justify-content: center;
+}
+
 header {
-  padding: 1em;
-  background: var(--NavBackground);
-  text-align: center;
-  position: fixed;
-  z-index: 1000;
-  width: 100%;
+    padding: 0.5rem;
+    background: var(--NavBackground);
+    text-align: center;
+    position: fixed;
+    z-index: 1000;
+    width: 92vw;
+    border-radius: 0 0 1rem 1rem;
 }
 
 .logo {
     margin: 0;
     position: relative;
     display: inline-block;
+    //height: 3rem;
     img {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      height: 100%;
+      top: 45%;
+      left: 45%;
+      height: 90%;
+      border-radius: 50%;
+      border: 2px solid rgba(0, 0, 0, 0.6);
       transform: translate(-100%, -50%);
-      filter: contrast(80%) hue-rotate(40deg) brightness(40%) drop-shadow(-0.0em 0.0em 0.025em rgba(6, 37, 128, 0.87));
-      transition: filter 0.3s;
+      transition: 0.3s;
   }
 }
 
@@ -171,6 +265,14 @@ nav {
     span::after{
       top: 9px;
   }
+}
+
+#nameHeader {
+    text-shadow: 0px 0px 0.1em rgba(7, 42, 155, 0.5);
+    position:fixed; 
+    margin:auto; 
+    width: 100%;
+    font-size: 1.5rem;
 }
 
 @media screen and (min-width: 720px) {
