--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -49,7 +49,7 @@ canvas {
     display: grid;
     grid-template-rows: auto 1fr auto;
     height: 100vh;
-    padding-top: 3rem;
+    padding-top: 2rem;
     overflow-y: auto;
 }
 
@@ -144,28 +144,27 @@ canvas {
     font-size: 1.5rem;
 }
 
-
-
 header {
-    display: grid;
-    grid-template-columns: 1fr auto minmax(600px, 1fr) 1fr;
+    width: 92vw;
+    display: flex;
+    //grid-template-columns: 1fr auto minmax(600px, 1fr) 1fr;
+    flex-wrap: wrap;
+    justify-content: center;
     text-shadow: 0px 0px 0.1em rgb(7, 42, 155);
     padding: 0.5rem;
     background: var(--NavBackground);
     text-align: center;
     position: fixed;
     z-index: 1000;
-    width: 92vw;
     border-radius: 0 0 1rem 1rem;
 
 }
 
+
+
 .logo {
     margin: 0;
     position: relative;
-    grid-column: 2;
-    display: block;
-    justify-content: right;
     user-select: none;
 
     img {
@@ -182,13 +181,14 @@ header {
 }
 
 .logo img:hover {
-    filter: contrast(80%) hue-rotate(10deg) brightness(80%) drop-shadow(-0.1em 0.1em 0.1em rgba(57, 71, 119, 0.733));
+    filter: contrast(80%) hue-rotate(10deg) brightness(90%) drop-shadow(0.0em 0.0em 0.15em rgba(57, 71, 119, 0.733));
 }
 
 nav {
     all: unset;
     font-family: Constantia;
-    grid-column: 3/4;
+    display: flex;
+    justify-content: flex-end;
 
     * {
         user-select: none;
@@ -200,13 +200,13 @@ nav {
         list-style: none;
         display: flex;
         justify-content: space-evenly;
+        flex-wrap: wrap;
 
         li {
             display: block;
-            flex: 0 1 auto;
             margin-top: 0.75em;
             margin-bottom: 1em;
-            margin-left: 1em;
+            margin-left: 2em;
         }
     }
 
