--- a/main.css
+++ b/main.css
@@ -10,9 +10,6 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
   -webkit-user-drag: none;
 }
 
@@ -125,6 +122,9 @@ canvas {
 #navContainer {
   display: flex;
   justify-content: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
 #nameHeader {
@@ -136,24 +136,22 @@ canvas {
 }
 
 header {
-  display: grid;
-  grid-template-columns: 1fr auto minmax(600px, 1fr) 1fr;
+  width: 92vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   text-shadow: 0px 0px 0.1em rgb(7, 42, 155);
   padding: 0.5rem;
   background: var(--NavBackground);
   text-align: center;
   position: fixed;
   z-index: 1000;
-  width: 92vw;
   border-radius: 0 0 1rem 1rem;
 }
 
 .logo {
   margin: 0;
   position: relative;
-  grid-column: 2;
-  display: block;
-  justify-content: right;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
@@ -170,13 +168,14 @@ header {
 }
 
 .logo img:hover {
-  filter: contrast(80%) hue-rotate(10deg) brightness(80%) drop-shadow(-0.1em 0.1em 0.1em rgba(57, 71, 119, 0.733));
+  filter: contrast(80%) hue-rotate(10deg) brightness(90%) drop-shadow(0em 0em 0.15em rgba(57, 71, 119, 0.733));
 }
 
 nav {
   all: unset;
   font-family: Constantia;
-  grid-column: 3/4;
+  display: flex;
+  justify-content: flex-end;
 }
 nav * {
   -webkit-user-select: none;
@@ -189,13 +188,13 @@ nav ul {
   list-style: none;
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 nav ul li {
   display: block;
-  flex: 0 1 auto;
   margin-top: 0.75em;
   margin-bottom: 1em;
-  margin-left: 1em;
+  margin-left: 2em;
 }
 nav a {
   position: relative;
