--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -8,20 +8,20 @@
 *::after {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
     -webkit-user-drag: none;
 }
 
 body {
     height: 100vh;
-    font: normal 75% Arial, Helvetica, sans-serif;
     margin: 0;
     font-size: 1em;
-    -ms-overflow-style: none;
     overflow: -moz-scrollbars-none;
+    font-family: Arial, sans-serif;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    ::-webkit-scrollbar {
+    display: none;
+    }
 }
 
 body::-webkit-scrollbar {
@@ -53,6 +53,15 @@ canvas {
     overflow-y: auto;
 }
 
+#aboutWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    padding-top: 2rem;
+    overflow-y: auto;
+}
+
 #contentContainer {
     z-index: 1;
     font-family: Inter, sans-serif;
@@ -66,6 +75,7 @@ canvas {
     -webkit-background-clip: text;
     background-attachment: fixed;
     background-position: fixed;
+
     color: transparent //color: rgba(255, 0, 0, 0.072);
 }
 
@@ -79,6 +89,22 @@ canvas {
     margin-inline: 8vw;
     margin-block: 4rem;
     border-radius: 1rem;
+}
+
+.mediaSection {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    height: 100vh;
+    padding: 1rem;
+    overflow-y: auto;
+}
+
+.mSecMedia {
+    flex-grow: 1;
+}
+
+.mSecContent {
+    flex-grow: 2;
 }
 
 #footerContainer {
@@ -134,6 +160,10 @@ canvas {
 #navContainer {
     display: flex;
     justify-content: center;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #nameHeader {
