--- a/src/css/index.css
+++ b/src/css/index.css
@@ -161,68 +161,29 @@ canvas {
   font-size: 1.5rem;
 }
 
-header {
+#navBar {
   width: 92vw;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   text-shadow: 0px 0px 0.1em rgb(7, 42, 155);
   padding: 0.5rem;
   background: var(--NavBackground);
-  text-align: center;
   position: fixed;
   z-index: 1000;
   border-radius: 0 0 1rem 1rem;
-}
-
-.logo {
-  margin: 0;
-  position: relative;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
-}
-.logo img {
-  position: absolute;
-  top: 45%;
-  left: 45%;
-  height: 90%;
-  border-radius: 50%;
-  border: 2px solid rgba(0, 0, 0, 0.6);
-  transform: translate(-100%, -50%);
-  transition: 0.3s;
-}
-
-.logo img:hover {
-  filter: contrast(80%) hue-rotate(10deg) brightness(90%) drop-shadow(0em 0em 0.15em rgba(57, 71, 119, 0.733));
-}
-
-nav {
-  all: unset;
   font-family: Constantia;
-  display: flex;
-  justify-content: flex-end;
 }
-nav * {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+
+.navItem {
+  padding: 0.5rem;
+  margin-inline: 1em;
+  margin-top: none;
+  margin-bottom: none;
 }
-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-}
-nav ul li {
-  display: block;
-  margin-top: 0.75em;
-  margin-bottom: 1em;
-  margin-left: 2em;
-}
-nav a {
+.navItem a {
   position: relative;
   color: black;
   text-decoration: none;
@@ -232,7 +193,7 @@ nav a {
   opacity: 0.8;
   transition: opacity 150ms ease-in-out;
 }
-nav a::before, nav a::after {
+.navItem a::before, .navItem a::after {
   content: "";
   position: absolute;
   left: 0;
@@ -242,17 +203,37 @@ nav a::before, nav a::after {
   transform: scaleX(0);
   transition: transform 300ms ease-in-out;
 }
-nav a::before {
+.navItem a::before {
   top: 0;
   transform-origin: center;
 }
-nav a::after {
+.navItem a::after {
   bottom: 0;
   transform-origin: center;
 }
-nav a:hover::before, nav a:hover::after {
+.navItem a:hover::before, .navItem a:hover::after {
   transform: scaleX(1);
 }
-nav a:hover, nav a:active {
+.navItem a:hover, .navItem a:active {
   color: rgb(68, 68, 68);
+}
+
+.navLogo {
+  padding-inline: 1rem;
+  margin-top: none;
+  margin-bottom: none;
+  margin-right: auto;
+}
+.navLogo img {
+  position: relative;
+  top: 50%;
+  left: 100%;
+  height: 3rem;
+  border-radius: 50%;
+  border: 2px solid rgba(0, 0, 0, 0.6);
+  transform: translate(-100%, -50%);
+  transition: 0.3s;
+}
+.navLogo img:hover {
+  filter: contrast(80%) hue-rotate(10deg) brightness(90%) drop-shadow(0em 0em 0.15em rgba(57, 71, 119, 0.733));
 }/*# sourceMappingURL=index.css.map */
