--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -30,7 +30,7 @@ body::-webkit-scrollbar {
 }
 
 canvas {
-    display: block;
+    //display: block;
     vertical-align: bottom;
 }
 
@@ -77,6 +77,8 @@ canvas {
     border-radius: 0 0 1rem 1rem;
     user-select: none;
     font-family: Constantia;
+    font-size: 1.2rem;
+    font-weight: 400;
 }
 
 .navItem {
@@ -90,7 +92,6 @@ canvas {
         position: relative; // Make the anchor relative for the pseudo-elements
         color: black;
         text-decoration: none;
-        font-size: 1.2rem;
         text-transform: uppercase;
         display: inline-block;
         opacity: 0.8;
@@ -170,7 +171,7 @@ canvas {
   
 #contentContainer {
     z-index: 1;
-    font-family: Inter, sans-serif;
+    font-family: Constantia;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -199,39 +200,44 @@ canvas {
 
 .mediaSection {
     display: flex;
-    //grid-template-columns: auto 1fr auto;
+    line-height: 1.5;
     height: 100%;
     width: fit-content;
     padding: 0.5rem;
     overflow-y: auto;
-    gap: 3rem;
+    gap: 1.5rem;
     justify-content: center;
+    overflow: scroll;
 }
 
 .mSecMedia {
-    flex-grow: 1;
     padding: 0.75rem;
+    --sideLength: calc(max(500px, 55vw)*0.32);
     img {
         position: relative;
-        top: 50%;
+        top: calc(var(--sideLength)*0.5);
         left: 100%;
-        height: 100%    ;
+        height: var(--sideLength);
+        width: var(--sideLength);
         border-radius: 50%;
         border: 2px solid rgba(19, 19, 33, 0.8);
         transform: translate(-100%, -50%);
     }
 }
 
-.aboutTile {
+#aboutTile {
+    z-index: 10;
+    --width: max(500px, 55vw);
     padding: 1rem;
-    height: 18rem;
-    width: 50rem;
+    height: clamp(fit-content, calc(var(--width)*0.32), 300vh);
+    width: var(--width);
     z-index: -2;
     background: rgba(205, 205, 226, 0.75);
     margin-inline: auto;
     border-radius: 1rem;
     color: black;
     text-align: left;
+    //when screen is to small fix card to prevent it from clipping behind navbar
 }
 
 .mSecHeader {
@@ -242,7 +248,6 @@ canvas {
 }
 
 .mSecContent {
-    flex-grow: 3;
     display: flex;
     flex-direction: column
 }
@@ -253,9 +258,8 @@ canvas {
 
 .mSecFooter {
     margin-top: auto;
-    padding: 0em;
+    padding-block: 0.5em;
     display: flex;
-    margin-left: -1rem;
     justify-content: flex-start;
 }
 
@@ -310,7 +314,7 @@ canvas {
 .aboutFooterIcon {
     height: 3rem;
     width: 3rem;
-    margin-inline: 1rem;
+    margin-right: 2rem;
     background-repeat: no-repeat;
     background-size: cover; 
     background-color: rgba(134, 134, 151, 0.76);;
@@ -320,6 +324,7 @@ canvas {
     justify-content: center;
     border: 1px solid rgba(15, 18, 49, 0.271);
 }
+
 .github-icon {
     svg {
         height: 60%;
@@ -333,7 +338,7 @@ canvas {
     }
     svg:hover {
         path {
-            fill: rgba(72, 0, 98, 0.9);
+            fill: rgba(65, 0, 88, 0.9);
         }
     }
 }
@@ -351,7 +356,7 @@ canvas {
     }
     svg:hover {
         path {
-            fill: rgba(0, 115, 177, 0.8)
+            fill: rgba(1, 43, 158, 0.8)
         }
     }
 }
