feat: added fade in on load for aboutTile

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -44,6 +44,7 @@ canvas {
     background-size: cover;
     background-position: 50% 50%;
     z-index: -99;
+    overflow: hidden;
 }
 
 //NAV and Header Stuff
@@ -237,8 +238,22 @@ canvas {
     border-radius: 1rem;
     color: black;
     text-align: left;
-    //when screen is to small fix card to prevent it from clipping behind navbar
 }
+
+@keyframes fadeInUp {
+    0% {
+      transform: translateY(100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0%);
+      opacity: 1;
+    }
+  }
+  
+  .fadeInUp-animation {
+    animation: 1.5s fadeInUp;
+  }
 
 .mSecHeader {
     padding-top: 1rem;
@@ -250,10 +265,13 @@ canvas {
 .mSecContent {
     display: flex;
     flex-direction: column
+    
 }
 
 .mSecText {
-
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 .mSecFooter {
