--- a/src/css/index.css
+++ b/src/css/index.css
@@ -42,6 +42,7 @@ canvas {
   background-size: cover;
   background-position: 50% 50%;
   z-index: -99;
+  overflow: hidden;
 }
 
 #navContainer {
@@ -224,6 +225,20 @@ canvas {
   text-align: left;
 }
 
+@keyframes fadeInUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+.fadeInUp-animation {
+  animation: 1.5s fadeInUp;
+}
+
 .mSecHeader {
   padding-top: 1rem;
   margin: 0;
@@ -234,6 +249,12 @@ canvas {
 .mSecContent {
   display: flex;
   flex-direction: column;
+}
+
+.mSecText {
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 
 .mSecFooter {
